fix small spacing concern

--- a/task-manager/src/App.css
+++ b/task-manager/src/App.css
@@ -24,7 +24,7 @@ body {
 
 h1 {
   color: #fff;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
   font-size: 2rem;
   text-align: center;
 }
